# chisel-decoders

./: .gitignore  Cargo.toml  README.md  README.tpl  baseline.sh  cliff.toml  run_profiling.sh
.github/workflows/: rust.yml
benches/: ascii_decoding.rs  decoding.rs  fuzz.rs  iter_decoding.rs  native_decoding.rs  twitter.rs  utf8_decoding.rs
fixtures/json/bench/ascii/: simple.json
src/: ascii.rs  common.rs  decoders.rs  lib.rs  utf8.rs
src/test/: mod.rs  utf8.rs
tests/: utf8_decoder.rs
