[package]
name = "chisel-decoders"
version = "1.0.1"
edition = "2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version = "1.56"
description = "Simple UTF-8 byte stream decoder"
license = "MIT OR Apache-2.0"
keywords = ["utf8", "decoder"]
categories = ["encoding", "text-processing"]
repository = "https://github.com/jonnycoombes/chisel-decoders"

[dependencies]

[dev-dependencies]
criterion = {version ="0.4.0", features = ["html_reports"]}
pprof = {version = "0.11.1", features = ["flamegraph", "criterion", "protobuf"]}

[[bench]]
name = "decoding"
harness = false


[features]
